--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start": "react-native start",
     "ios": "react-native run-ios",
     "android": "react-native run-android",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.8.3",
-    "react-native": "0.59.4",
     "crypto-js": "^3.1.9-1",
-    "mand-mobile-rn": "^0.1.0-beta.1",
+    "mand-mobile-rn": "^0.1.0-beta.2",
+    "react": "16.8.6",
+    "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.0.16",
     "react-navigation": "^3.3.2",
     "react-navigation-redux-helpers": "^3.0.0",
@@ -25,26 +25,26 @@
     "tslib": "^1.9.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.0",
-    "@babel/runtime": "^7.5.1",
+    "@babel/core": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
     "@react-native-community/eslint-config": "^0.0.5",
     "@types/jest": "^24.0.15",
     "@types/react": "^16.8.23",
     "@types/react-native": "^0.60.0",
-    "@types/react-test-renderer": "^16.8.2",
     "@types/react-navigation": "^3.0.4",
     "@types/react-redux": "^7.0.1",
+    "@types/react-test-renderer": "^16.8.2",
     "@types/remote-redux-devtools": "^0.5.3",
     "babel-jest": "^24.8.0",
     "eslint": "^6.0.1",
     "jest": "^24.8.0",
-    "metro-react-native-babel-preset": "^0.55.0",
-    "react-test-renderer": "16.8.6",
-    "typescript": "^3.5.3",
+    "metro-react-native-babel-preset": "^0.56.0",
     "prettier": "^1.16.4",
     "prettier-tslint": "^0.4.2",
+    "react-test-renderer": "16.8.6",
     "tslint": "^5.13.0",
-    "tslint-react": "^3.6.0"
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.5.3"
   },
   "jest": {
     "preset": "react-native",
